--- a/achivemen.html
+++ b/achivemen.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>achivement of kamu international university in uganda</title>
+    <link rel="stylesheet" href="mystyle.css">
+<style>
+    a{
+        background-color: goldenrod;
+        color: blueviolet;
+    }
+    a hover{
+        background-color: blue;
+        color: aquamarine;
+    }
+</style>
+    <div class="a">
+    <a href="achivemen.html">Acheived</a>
+    <a href="contact.html">contact page</a>
+    <a href="coures.html">Courses</a>
+    <a href="gallery.html">Gallar</a>
+    <a href="index.html">Home</a>
+    <a href="achivemen.html">achieved</a>
+
+</div>
+
 </head>
-<h1>THE ACHIVEMENTS OF KAMU INTERNNATIONAL UNIVERASITY</h1>
-<body>
+<h1 class="h1styles">THE ACHIVEMENTS OF KAMU INTERNNATIONAL UNIVERASITY</h1>
+<body class="body">
     <li>The development of the new National Strategic Plan for HIV/AIDS for Uganda</li>
     <li>The Department of Women and Gender Studies has various tele-centres in Igangahelp in training people in networking. </li>
     <li>A new computer lab for students has been furnished and is operational.</li>
