--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Structures of Kamu International University</title>
+    <style>
+        a{
+                   background-color: goldenrod;
+                   color: blueviolet;
+               }
+               a hover{
+                   background-color: blue;
+                   color: aquamarine;
+               }
+        </style> 
+           
+               <div class="a">
+               <a href="achivemen.html">Acheived</a>
+               <a href="contact.html">contact page</a>
+               <a href="coures.html">Courses</a>
+               <a href="gallery.html">Gallar</a>
+               <a href="index.html">Home</a>
+               <a href="achivemen.html">achieved</a>
+           
+           </div>
 
     <link rel="stylesheet" href="style.css">
 
