--- a/requirements.html
+++ b/requirements.html
@@ -5,10 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>requirements for kamu interntional university</title>
-</head>
-<h1>THE REQUIREMENTS OF KAMU INTERNATIONAL UNIVERSITY IN UGANDA</h1>
+    <link rel="stylesheet" href="mystyle.css">
+   <style>
+ a{
+        background-color: goldenrod;
+        color: blueviolet;
+    }
+    a hover{
+        background-color: blue;
+        color: aquamarine;
+    }
+   </style>
 
-<body>
+    <div class="a">
+    <a href="achivemen.html">Acheived</a>
+    <a href="contact.html">contact page</a>
+    <a href="coures.html">Courses</a>
+    <a href="gallery.html">Gallar</a>
+    <a href="index.html">Home</a>
+    <a href="achivemen.html">achieved</a>
+
+</div>
+</head>
+<h1 class="h1styles">THE REQUIREMENTS OF KAMU INTERNATIONAL UNIVERSITY IN UGANDA</h1>
+
+<body class="body">
     <LI>At least a principle pass in Mathematics in the Uganda Advanced Certificate of Education (UACE) or its equivalent.</LI>
     <LI>At least two principle passes at the same sitting in UACE in any of the following subjects: - Economics, Entrepreneurship, Geography, Physics, Chemistry and Biology</LI>
     <LI>Skills in computing and building</LI>
